# grendtrek-protocol

./: Cargo.toml  cargo-dep
src/: main.rs
src/common/: global_macros.rs  grend_trek_error.rs  mod.rs
src/database_settings/: connections.rs  mod.rs
src/database_settings/postgresql/: from_sql_server_to_postgres.rs  mod.rs  postgres_pool.rs
src/database_settings/sql_server/: mod.rs  sql_server_pool.rs
src/models/: data_schema.rs  foreign_keys.rs  mod.rs
