[package]
name = "grendtrek-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
tiberius = "0.12.3"
tokio = { version = "1.46.1", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
futures = "0.3.31"
once_cell = "1.21.3"
full = "0.3.0"
